# static-analyzer-bench

./: pyproject.toml
src/static-analyzer-bench/: main.py
src/static_analyzer_bench/: __init__.py
