[project]
name = "static-analyzer-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Isaac Nudelman", email = "isaac.nudelman@utexas.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "codechecker>=6.24.4",
]

[project.scripts]
static-analyzer-bench = "static-analyzer-bench:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.uv]
environments = [
    "sys_platform == 'linux'",
]