[project]
name = "static_analyzer_bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Isaac Nudelman", email = "isaac.nudelman@utexas.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "codechecker>=6.24.4",
]

[project.scripts]
static_analyzer_bench = "static_analyzer_bench:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.uv]
environments = [
    "sys_platform == 'linux'",
]